Tons of fixes